<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.vivi</groupId>
    <artifactId>gulimall</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>gulimall</name>
    <description>谷粒商城父工程</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
    </properties>
    <modules>
        <module>gulimall-coupon</module>
        <module>gulimall-product</module>
        <module>gulimall-order</module>
        <module>gulimall-member</module>
        <module>gulimall-ware</module>
        <module>gulimall-gateway</module>
        <!--		<module>renren-fast</module>-->
        <!--		<module>renren-generator</module>-->
        <module>gulimall-common</module>
        <module>gulimall-third-party</module>
        <module>gulimall-search</module>
        <module>gulimall-auth-server</module>
        <module>gulimall-cart</module>
        <module>gulimall-seckill</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version> <!-- 使用新版插件 -->
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <!-- 允许未命名模块访问 jdk.compiler 的包 -->
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <fork>true</fork> <!-- 必须启用 fork -->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
